Fix spacing

--- a/src/components/common/Divider/Divider.module.scss
+++ b/src/components/common/Divider/Divider.module.scss
@@ -2,4 +2,5 @@
   width: 100%;
   border: 0;
   border-bottom: 1px solid var(--a-border-subtle);
+  margin: var(--a-spacing-6) 0;
 }
